--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "serve-favicon": "^2.5.0",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1"
   },
