--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "nodemon": "^2.0.3",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.14.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "jsonwebtoken": "^8.5.1"
+    "dotenv": "^8.2.0"
   },
   "scripts": {
     "heroku-postbuild": "npm install",
